--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
+build-raytracer-Desktop_Qt_5_12_3_GCC_64bit-Debug/
+build-raytracer-Desktop_Qt_5_12_3_GCC_64bit-Profile/
+build-raytracer-Desktop_Qt_5_12_3_GCC_64bit-Release/
 *.o
