Project structure cleanup: * .pro (QMake) files are now gone - we use CMake instead now. * QtTests are removed- we use Catch instead.
This approach makes it easier for switching between QtCreator and CLion when developing.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-build-raytracer-Desktop_Qt_5_12_3_GCC_64bit-Debug/
-build-raytracer-Desktop_Qt_5_12_3_GCC_64bit-Profile/
-build-raytracer-Desktop_Qt_5_12_3_GCC_64bit-Release/
+build-*/
 *.o
