Added the mainwindow.ui file to the executable (so QtCreator puts it in the right folder structure).

--- a/raytracer/main/CMakeLists.txt
+++ b/raytracer/main/CMakeLists.txt
@@ -40,6 +40,7 @@ add_executable(raytracer
         intersection.cpp
         main.cpp
         mainwindow.cpp
+        mainwindow.ui
         object.cpp
         point.cpp
         ray.cpp
