Wrapping up chapter6. Lighting is in place and in order to put everything together, some refactoring was needed. Have to revisit the intersections collections to allow other objects than Spheres. But this will do for now :) There is now a shadedSphere effects which renders with material and light on the Sphere. I enabled the animation as well :)

--- a/raytracer/main/CMakeLists.txt
+++ b/raytracer/main/CMakeLists.txt
@@ -36,6 +36,10 @@ add_executable(raytracer
         sphere.h
         tuple.h
         vector.h
+        light.h
+        material.h
+        lighting.h
+
         color.cpp
         glwidget.cpp
         helper.cpp
@@ -49,7 +53,6 @@ add_executable(raytracer
         raytracer.cpp
         sphere.cpp
         tuple.cpp
-        vector.cpp
         )
 
 target_link_libraries(raytracer Qt5::Core)
