Start of Chapter 7: World object, store computations on intersections and shading in the world.

--- a/raytracer/main/CMakeLists.txt
+++ b/raytracer/main/CMakeLists.txt
@@ -39,6 +39,8 @@ add_executable(raytracer
         light.h
         material.h
         lighting.h
+        world.h
+        computations.h
 
         color.cpp
         glwidget.cpp
