--- a/raytracer/catch/CMakeLists.txt
+++ b/raytracer/catch/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(catchtests
         chapter3.cpp
         chapter4.cpp
         chapter5.cpp
-        chapter6.cpp)
+        chapter6.cpp
+        chapter7.cpp)
 
 target_link_libraries(catchtests Qt5::Core)
