Did a side-step from the book and refactored the objects to be shapes. Shapes are now the objects used in the world. All shapes inherit from the base class Shape and should implement both intersect and normal_at. We'll come back to this in a later chapter but I decided to do this now while designing the World class.

--- a/raytracer/main/CMakeLists.txt
+++ b/raytracer/main/CMakeLists.txt
@@ -29,7 +29,7 @@ add_executable(raytracer
         intersection.h
         mainwindow.h
         matrix.h
-        object.h
+        shape.h
         point.h
         ray.h
         raytracer.h
@@ -45,15 +45,12 @@ add_executable(raytracer
         color.cpp
         glwidget.cpp
         helper.cpp
-        intersection.cpp
         main.cpp
         mainwindow.cpp
         mainwindow.ui
-        object.cpp
         point.cpp
         ray.cpp
         raytracer.cpp
-        sphere.cpp
         tuple.cpp
         )
 
