Camera, World and a render function that takes a camera and world. defaultWorld() now renders the default world.

--- a/raytracer/main/CMakeLists.txt
+++ b/raytracer/main/CMakeLists.txt
@@ -52,7 +52,7 @@ add_executable(raytracer
         ray.cpp
         raytracer.cpp
         tuple.cpp
-        )
+        camera.h)
 
 target_link_libraries(raytracer Qt5::Core)
 target_link_libraries(raytracer Qt5::Widgets)
