Another "minor" sidestep from the book. Changed the entire UI from widgets to QML and added a few sliders for the camera movement. I think this will be a huge YUGE benefit when it comes to adding on the UI for the raytracer later on. The same mechanism to draw the image is used even on the QML approach.

--- a/raytracer/main/CMakeLists.txt
+++ b/raytracer/main/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
 project(raytracer)
 
-set(CMAKE_CXX_STANDARD 17)
-
 # Sanitizers
 #message(WARNING "Sanitizer(s) enabled!")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer -g -O1")
@@ -10,24 +8,23 @@ set(CMAKE_CXX_STANDARD 17)
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=thread -fPIE -pie -g")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions")
-
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTORCC ON)
-
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-find_package(Qt5Core REQUIRED)
-find_package(Qt5Widgets REQUIRED)
+project(qml LANGUAGES CXX)
+
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+find_package(Qt5 COMPONENTS Core Quick REQUIRED)
 
 add_executable(raytracer
-        effect.h
+        qml.qrc
         canvas.h
         color.h
-        glwidget.h
-        helper.h
         intersection.h
-        mainwindow.h
         matrix.h
         shape.h
         point.h
@@ -41,18 +38,18 @@ add_executable(raytracer
         lighting.h
         world.h
         computations.h
+        imageitem.h
 
         color.cpp
-        glwidget.cpp
-        helper.cpp
         main.cpp
-        mainwindow.cpp
-        mainwindow.ui
         point.cpp
         ray.cpp
         raytracer.cpp
         tuple.cpp
+        imageitem.cpp
         camera.h)
 
+target_compile_definitions(raytracer PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
+
 target_link_libraries(raytracer Qt5::Core)
-target_link_libraries(raytracer Qt5::Widgets)
+target_link_libraries(raytracer Qt5::Quick)
