And then there was.. Shadows! One commit for the whole chapter this time. Shadows should(?) be supported with multiple light sources. Add some lights to the world (e.g. line 296 in raytracer.cpp) to see that in action!

--- a/raytracer/catch/CMakeLists.txt
+++ b/raytracer/catch/CMakeLists.txt
@@ -25,6 +25,8 @@ add_executable(catchtests
         chapter4.cpp
         chapter5.cpp
         chapter6.cpp
-        chapter7.cpp)
+        chapter7.cpp
+        chapter8.cpp
+        )
 
 target_link_libraries(catchtests Qt5::Core)
