Playing around with transforming world coordinates to screen pixels (for drawing "3D" instead of raytracing).
I think this can be useful for e.g. showing a simple wireframe representation of the world before actually rendering it.

--- a/raytracer/catch/CMakeLists.txt
+++ b/raytracer/catch/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable(catchtests
         chapter7.cpp
         chapter8.cpp
         chapter9.cpp
+        chapter10.cpp
         )
 
 target_link_libraries(catchtests Qt5::Core)
