Experimental(?) commit which introduces a small information window to the UI. This is also a first step in introducing "bridge" structures to expose pure C++ classes through to QML (without converting all objects to QObjects). Did a one stop in converting all double to float as well while at it :)
Oh, objects can be selected by clickin in the image. This has worked for some time but never exposed in the UI :)

--- a/raytracer/main/CMakeLists.txt
+++ b/raytracer/main/CMakeLists.txt
@@ -41,6 +41,8 @@ add_executable(freeside-raytracer
         imageitem.h
         plane.h
         pattern.h
+        camera.h
+        shapeqmlbridge.h
 
         color.cpp
         main.cpp
@@ -49,7 +51,8 @@ add_executable(freeside-raytracer
         raytracer.cpp
         tuple.cpp
         imageitem.cpp
-        camera.h)
+        shapeqmlbridge.cpp
+        )
 
 target_compile_definitions(freeside-raytracer PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
 
