Beginning Chapter 11 - reflections!

--- a/raytracer/catch/CMakeLists.txt
+++ b/raytracer/catch/CMakeLists.txt
@@ -30,6 +30,7 @@ add_executable(catchtests
         chapter8.cpp
         chapter9.cpp
         chapter10.cpp
+        chapter11.cpp
         )
 
 target_link_libraries(catchtests Qt5::Core)
