Separated the Information Window into its own component. Added the infrastructure to render a preview of the currently selected object (its material included, that's the idea...). The goal is to have a material editor that will alter the object in the main scene.

--- a/raytracer/main/CMakeLists.txt
+++ b/raytracer/main/CMakeLists.txt
@@ -43,6 +43,7 @@ add_executable(freeside-raytracer
         pattern.h
         camera.h
         shapeqmlbridge.h
+        worlds.h
 
         color.cpp
         main.cpp
