First step in moving all free functions into its own place instead of spreading them out in various header files.

--- a/raytracer/catch/CMakeLists.txt
+++ b/raytracer/catch/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(catchtests
         ../main/point.cpp
         ../main/ray.cpp
         ../main/tuple.cpp
+        ../main/engine.cpp
 
         main.cpp
         chapter1.cpp
