Refactoring after code analysis, many minor things :P

--- a/raytracer/catch/CMakeLists.txt
+++ b/raytracer/catch/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(
         ../main/ray.cpp
         ../main/tuple.cpp
         ../main/engine.cpp
+        ../main/sphere.cpp
 
         # test files
         main.cpp
