Dark mode! Styled the QML components by adding a configuration file and changing objects to Qt Quick Control types. Added camera z-zoom on mouse wheel. Removed titlebar on the information window.

--- a/raytracer/main/CMakeLists.txt
+++ b/raytracer/main/CMakeLists.txt
@@ -12,7 +12,6 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 project(qml LANGUAGES CXX)
 
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
@@ -28,6 +27,7 @@ add_executable(
         # resources
         qml.qrc
         textures.qrc
+        application.qrc
 
         # headers
         canvas.h
