Experimenting with using an AppSettings class that can hold in-memory cache as well as synchronize to disk (using QSettings as backend).

--- a/raytracer/catch/CMakeLists.txt
+++ b/raytracer/catch/CMakeLists.txt
@@ -26,6 +26,7 @@ add_executable(
         ../main/tuple.cpp
         ../main/engine.cpp
         ../main/sphere.cpp
+        ../main/appsettings.cpp
 
         # test files
         main.cpp
