Added a xmas world with some spheres and a nice background texture

--- a/raytracer/CMakeLists.txt
+++ b/raytracer/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.13)
 project("Freeside Raytracer")
 
 add_subdirectory(main)
-add_subdirectory(catch)
+#add_subdirectory(catch)
