Rearranged the object manipulation and settings windows to be part of the main window. I think it works better this way.

--- a/raytracer/main/CMakeLists.txt
+++ b/raytracer/main/CMakeLists.txt
@@ -2,11 +2,11 @@ cmake_minimum_required(VERSION 3.13)
 project(freeside-raytracer)
 
 # Sanitizers
-message(WARNING "Sanitizer(s) enabled!")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer -g -O1")
+#message(WARNING "Sanitizer(s) enabled!")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer -g -O1")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=leak -g -O1")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=thread -fPIE -pie -g")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=undefined")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=undefined")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions")
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
