--- a/raytracer/catch/CMakeLists.txt
+++ b/raytracer/catch/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(
         ../main/sphere.cpp
         ../main/appsettings.cpp
         ../main/cube.cpp
+        ../main/cylinder.cpp
 
         # test files
         main.cpp
@@ -43,6 +44,6 @@ add_executable(
         chapter10.cpp
         chapter11.cpp
         chapter12.cpp
-        )
+        chapter13.cpp)
 
 target_link_libraries(catchtests Qt5::Core)
