--- a/raytracer/main/CMakeLists.txt
+++ b/raytracer/main/CMakeLists.txt
@@ -15,6 +15,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions")
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(QSG_INFO 1)
 
 find_package(Qt5 COMPONENTS Core Quick Concurrent REQUIRED)
 
