Phew! Started on the bonus chapter http://www.raytracerchallenge.com/bonus/area-light.html as a small detour. First three tests in place.
Updated Catch to v2.11.3.

--- a/raytracer/catch/CMakeLists.txt
+++ b/raytracer/catch/CMakeLists.txt
@@ -42,6 +42,6 @@ add_executable(
         chapter11.cpp
         chapter12.cpp
         chapter13.cpp
-)
+        arealights.cpp)
 
 target_link_libraries(catchtests Qt5::Core)
