Add Install Qt step

--- a/.github/workflows/cmake_build_matrix.yml
+++ b/.github/workflows/cmake_build_matrix.yml
@@ -40,6 +40,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    
+    - name: Install Qt
+      uses: jurplel/install-qt-action@v2
 
     - name: Download Ninja and CMake
       id: cmake_and_ninja
