--- a/.github/workflows/cmake_build_matrix.yml
+++ b/.github/workflows/cmake_build_matrix.yml
@@ -16,17 +16,17 @@ jobs:
       fail-fast: false
       matrix:
         config:
+#        - {
+#            name: "Windows Latest MSVC", artifact: "Windows-MSVC.tar.xz",
+#            os: windows-latest,
+#            cc: "cl", cxx: "cl",
+#            environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
+#          }
         - {
-            name: "Windows Latest MSVC", artifact: "Windows-MSVC.tar.xz",
-            os: windows-latest,
-            cc: "cl", cxx: "cl",
-            environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
-          }
-        - {
-            name: "Windows Latest MinGW", artifact: "Windows-MinGW.tar.xz",
-            os: windows-latest,
-            cc: "gcc", cxx: "g++"
-          }
+#            name: "Windows Latest MinGW", artifact: "Windows-MinGW.tar.xz",
+#            os: windows-latest,
+#           cc: "gcc", cxx: "g++"
+#          }
         - {
             name: "Ubuntu Latest GCC", artifact: "Linux.tar.xz",
             os: ubuntu-latest,
